--- a/Lab_01.csproj
+++ b/Lab_01.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BaseViewModel.cs" />
     <Compile Include="Views\HoroscopeView.xaml.cs">
       <DependentUpon>HoroscopeView.xaml</DependentUpon>
     </Compile>
